# OpenGL

./: .gitignore  CMakeLists.txt
include/: Shader.h  camera.h  gllib.h  texture.h
shaders/: shader.fsh  shader.vsh
src/: main.cpp
